<resources>
    <string name="xunshi_app_name">变电运维智能移动作业终端</string>
    <string name="xs_yw_dialog_tips">请输入遗留问题</string>
    <string name="xs_yw_test_report">试验报告</string>
    <string name="xs_yw_complete_work">完成工作</string>
    <string name="xs_yw_complete">完\t成</string>
    <string name="xs_special_inspection_str">专项\n巡检</string>
    <string name="xs_inspection_train_str">巡检培训</string>
    <string name="xs_new_equipment_inspection_str">新设备\n投运巡检</string>
    <string name="xs_acceptance_equipment_str">设备\n验收</string>
    <string name="xs_inspection_task_remind_str">巡检任务提醒</string>
    <string name="xs_inspection_ready_str">巡检前准备</string>
    <string name="xs_exist_defect_str">现存缺陷</string>
    <string name="xs_inspection_standard_str">巡视标准</string>
    <string name="xs_power_station_str">变电站</string>
    <string name="xs_battery_infor_str">蓄电池组参数</string>
    <string name="xs_add_new_defect_str">新增缺陷</string>
    <string name="xs_add_new_defect_define_str">新增缺陷定义</string>
    <string name="xs_revoke_str">撤\t销</string>
    <string name="xs_test_step_str">试验步骤</string>
    <string name="xs_comprehensive_inspection_no_symbol_str">全面巡检</string>
    <string name="xs_focus_attention_str">重点关注</string>
    <string name="xs_picker_tag">无</string>
    <string name="xs_record_defect_str">记录缺陷</string>
    <string name="xs_reference_photo_str">参考图片</string>
    <string name="xs_reference_standard_str">参考标准</string>
    <string name="xs_deal_method_str">处理方法</string>
    <string name="xs_yw_take_picture">拍照</string>
    <string name="xs_yw_take_voice">录音</string>
    <string name="xs_yw_take_vedio">录像</string>
    <string name="xs_change_pic_str">更换照片</string>
    <string name="xs_do_list_str">待办事项：共0项\n已办事项：共0项</string>
    <string name="xs_inspection_start_time_str">巡检开始时间：</string>
    <string name="xs_work_start_time_str">工作开始时间：</string>
    <string name="xs_inspection_persons_str">巡检人员：</string>
    <string name="xs_work_persons_str">工作人员：</string>
    <string name="xs_work_department_str">工作单位：</string>
    <string name="xs_work_group_str">工作班组：</string>
    <string name="xs_inspection_end_time_str">巡检结束时间：</string>
    <string name="xs_work_end_time_str">工作结束时间：</string>
    <string name="xs_inspection_temperature_str">巡检时温度：</string>
    <string name="xs_inspection_humidity_str">巡检时湿度：</string>
    <string name="xs_inspection_weather_str">巡检时天气：</string>
    <string name="xs_inspection_type_name">试验名称：</string>
    <string name="xs_battery_name2_str">蓄电池组名称</string>
    <string name="xs_battery_name_str">蓄电池组名称：</string>
    <string name="xs_battery_test_type_str">测试分类：</string>
    <string name="xs_inspection_result_str">巡检结果</string>
    <string name="xs_inspection_finish_status_str">巡检完成情况：未完成</string>
    <string name="xs_infrared_count_format_str">测温点数量：%1$s个</string>
    <string name="xs_discover_defect_count_format_str">发现的缺陷数量：%1$s个</string>
    <string name="xs_protect_clamp_count_format_str">保护压板核对数量：%1$s个</string>
    <string name="xs_constant_value_format_str">定值核对数量：%1$s个</string>
    <string name="xs_general_defect_str">一般缺陷</string>
    <string name="xs_work_finish_check_str">检查情况：</string>
    <string name="xs_work_finish_status_str">检测完成情况：未完成</string>
    <string name="xs_work_continue_str">继续检测</string>
    <string name="xs_work_result_str">检测结果</string>
    <string name="xs_serious_defect_str">严重缺陷</string>
    <string name="xs_crisis_defect_str">危急缺陷</string>
    <string name="xs_general_str">一般</string>
    <string name="xs_work_check_type_str">检测类别：</string>
    <string name="xs_serious_str">严重</string>
    <string name="xs_crisis_str">危急</string>
    <string name="xs_all_defect_str">巡检发现的缺陷</string>
    <string name="xs_remain_prolems_str">遗留问题</string>
    <string name="xs_new_defect_count_str">发现缺陷</string>
    <string name="xs_clear_count_str">验收缺陷</string>
    <string name="xs_track_count_str">跟踪缺陷</string>
    <string name="xs_copy_count_str">抄录数据</string>
    <string name="xs_all_defect_powerstation_str">本变电站目前现存</string>
    <string name="xs_new_product_inspection_times_str">设备新投巡检次数</string>
    <string name="xs_inspection_picture_str">巡检过程图片</string>
    <string name="xs_playback_str">巡检轨迹回放</string>
    <string name="xs_xunjian_line">巡检路线</string>
    <string name="xs_defect_control_str">缺陷管控</string>
    <string name="xs_current_device_exist_defect_str">当前设备存在缺陷</string>
    <string name="xs_add_defect_str">增加缺陷</string>
    <string name="xs_test_temperature_record_str">测温记录</string>
    <string name="xs_find_question_str">发现问题</string>
    <string name="xs_eliminate_defect_str">消除缺陷</string>
    <string name="xs_confirm_str">确\t认</string>
    <string name="xs_add_new_task">新建任务</string>
    <string name="xs_finish_temperature_str">完成测温</string>
    <string name="xs_add_str">新\t增</string>
    <string name="xs_report_to_leader_str">上\t报</string>
    <string name="xs_dialog_cancel_text_str">取\t消</string>
    <string name="xs_finish_check_str">完成核对</string>
    <string name="xs_take_picture_str">拍照</string>
    <string name="xs_please_select_device_part_str">请选择设备部件</string>
    <string name="xs_please_select_device">请选择缺陷设备</string>
    <string name="xs_please_select_spacing_str">请选择间隔</string>
    <string name="xs_please_select_device_type_str">请选择设备类型</string>
    <string name="xs_please_input_device_name_str">请输入设备名称</string>
    <string name="xs_please_select_inspection_date_str">请选择巡检时间</string>
    <string name="xs_please_select_after_today_date_str">请选择今天及以后的时间</string>
    <string name="xs_please_select_power_station_str">请选择变电站</string>
    <string name="xs_please_select_inspection_type_str">请选择巡检类型</string>
    <string name="xs_please_select_defect_reason_str">请选择缺陷原因</string>
    <string name="xs_please_input_defect_content_str">请输入缺陷内容</string>
    <string name="xs_next_set_new_product_inspection_date_str">下一步将选择新投设备并设定巡检次数</string>
    <string name="xs_track_history_str">缺陷历史</string>
    <string name="xs_track_defect_str">跟踪缺陷</string>
    <string name="xs_defect_eliminate_date_str">请选择缺陷消除日期</string>
    <string name="xs_eliminate_photo_str">请拍摄消缺拍照</string>
    <string name="xs_eliminate_work_tickets_str">请拍摄消除缺陷的工作票</string>
    <string name="xs_eliminate_record_str">请拍摄消缺记录</string>
    <string name="xs_please_input_charge_person_str">请输入消缺工作负责人</string>
    <string name="xs_custom_defect_content_str">自定义缺陷内容</string>
    <string name="xs_defect_content_str">缺陷内容</string>
    <string name="xs_defect_reason_str">缺陷原因</string>
    <string name="xs_select_inspection_type_str">选择巡检类型</string>
    <string name="xs_add_inspection_task_str">追加巡检任务</string>
    <string name="xs_noperson_guards_str">无人看守</string>
    <string name="xs_has_person_guards_str">有人(少人)看守</string>
    <string name="xs_please_input_value_str">请输入</string>
    <string name="xs_cannot_see_copyvalue">看不清</string>
    <string name="xs_please_input_report_value_str">请输入上报的内容</string>
    <string name="xs_report_generating_str">报告生成中\u2026</string>
    <string name="xs_finish_str">完\t成</string>
    <string name="xs_select_leader_str">选择上报人</string>
    <string name="xs_back_str">返\t回</string>
    <string name="xs_clear_all_mark_str">清除标记</string>
    <string name="xs_add_mark_str">添加标记</string>
    <string name="xs_report_str">报</string>
    <string name="xs_track_str">跟</string>
    <string name="xs_eliminate_str">验</string>
    <string name="xs_picture_function_str">图片选项</string>
    <string name="xs_task_function_title_str">任务选项</string>
    <string name="xs_continue_inspection_str">继续巡检</string>
    <string name="xs_see_inspection_details_str">查看详情</string>
    <string name="xs_finish_inspection_str">完成巡检</string>
    <string name="xs_wind_inspection_str">大风特巡</string>
    <string name="xs_device_title_str">设备</string>
    <string name="xs_result_str">电池列表</string>
    <string name="xs_finish_battery_tria_str">完成试验</string>
    <string name="xs_defect_standard_str">缺陷标准</string>
    <string name="xs_search_str">搜索</string>
    <string name="xs_please_input_search_content_str">请输入搜索内容</string>
    <string name="xs_electric_current_str">充电电流(安培)</string>
    <string name="xs_battery_voltage_str">电池电压(V)</string>
    <string name="xs_measure_temperature_str">测量温度(°C)</string>
    <string name="xs_work_temperature_jcstr">温度：</string>
    <string name="xs_work_humidity_jcstr">湿度：</string>
    <string name="xs_work_weather_jcstr">天气：</string>
    <string name="xs_load_current_str">负荷电流(A)</string>
    <string name="xs_rate_current_str">额定电流(A)</string>
    <string name="xs_control_voltage_str">控制母线电压(V)</string>
    <string name="xs_hours_times_str">(小时/次)：</string>
    <string name="xs_copy_all_value_str">集中抄录</string>
    <string name="xs_test_category_str">测试分类</string>
    <string name="xs_battery_count_str">蓄电池节数:</string>
    <string name="xs_protect_clamp_count_str">保护压板核对数量</string>
    <string name="xs_constant_value_count_str">定值核对数量</string>
    <string name="xs_battery_test_title_str">蓄电池测试</string>
    <string name="xs_battery_test_step_title_str">试验步骤</string>
    <string name="xs_spot_checks_str">抽查</string>
    <string name="xs_the_census_str">普查</string>
    <string name="xs_battery_108_str">108</string>
    <string name="xs_battery_20_str">20</string>
    <string name="xs_generate_result_str">生成结果项</string>
    <string name="xs_please_input_voltage_str">请输入电压</string>
    <string name="xs_please_copy_temperature_str">请抄录当前温度</string>
    <string name="xs_please_input_humidity_str">请抄录当前湿度</string>
    <string name="xs_please_input_resistance_str">请输入电阻</string>
    <string name="xs_before_inspection_ready_str">开始巡检前准备工作</string>
    <string name="xs_not_found_device">没有找到设备</string>
    <string name="xs_found_defect_str">发现缺陷，是否记录？</string>
    <string name="xs_copy_battery_value">抄录的数据</string>
    <string name="xs_choose_standard_source">请选择引用标准的设备</string>
    <string name="xs_battery_voltage_format_str">第%1$s组蓄电池电压：%2$sV</string>
    <string name="xs_battery_resistance_format_str">内阻：%1$smΩ</string>
    <string name="xs_add_task_tips_format_str">Tips:%1$s 每月 %2$s 2次</string>
    <string name="xs_defect_count_message">现存缺陷: %1$s</string>
    <string name="xs_manufacturer_format_str">生产厂家:%1$s</string>
    <string name="xs_device_model_format_str">产品型号:%1$s</string>
    <string name="xs_product_date_format_str">投产日期:%1$s</string>
    <string name="xs_device_number_format_str">设备类型:%1$s</string>
    <string name="xs_speak_content_format_str">开始%1$s作业</string>
    <string name="xs_speak_content_format_str1">开始%1$s</string>
    <string name="xs_report_title_format_str">%1$s报告</string>
    <string name="xs_question_description_format_str">%1$s  %2$s  %3$s发热,温度%4$s°C,%5$s 根据《带电设备红外诊断技术应用导则》,对缺陷定义“%6$s”</string>
    <string name="xs_question_description_format2_str">[问题%1$s]%2$s,判定此缺陷为%3$s</string>
    <string name="xs_defect_count_format_str">%1$s项</string>
    <string name="xs_frequency_str">频率</string>
    <string name="xs_all_time_str">时长</string>
    <string name="xs_normal_temperature_str">正常对应点温度：</string>
    <string name="xs_normal_str">正常</string>
    <string name="xs_no_normal_str">异常</string>
    <string name="xs_hours_str">(小时)：</string>
    <string name="xs_next_step_str">下一步</string>
    <string name="xs_dialog_sure_str">确\t定</string>
    <string name="xs_dialog_cancle_str">取\t消</string>
    <string name="xs_operate_ticket_infor_str">操作票信息</string>
    <string name="xs_department_str">单位</string>
    <string name="xs_operate_code_str">编号</string>
    <string name="xs_flr_str">发令人</string>
    <string name="xs_slr_str">受令人</string>
    <string name="xs_fl_time_str">发令时间</string>
    <string name="xs_please_input_flr_str">请输入发令人</string>
    <string name="xs_please_input_slr_str">请输入受令人</string>
    <string name="xs_operate_type_str">操作类型</string>
    <string name="xs_operate_type_jh_str">监护下操作</string>
    <string name="xs_operate_type_dr_str">单人操作</string>
    <string name="xs_operate_type_jxr_str">检修人员操作</string>
</resources>