<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/include_title"
            layout="@layout/xs_include_title" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_operate_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/xs_bottom_line_background_selector"
                    android:gravity="center_vertical"
                    android:minHeight="@dimen/xs_operate_content_minheight_px"
                    android:paddingLeft="@dimen/xs_global_padding_left_right_px"
                    android:paddingRight="@dimen/xs_global_padding_left_right_px"
                    android:textColor="@color/xs_global_text_color"
                    android:textSize="@dimen/xs_global_text_size_px" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/xs_global_margin_top_px"
                    android:background="@color/xs_green_color"
                    android:gravity="center_vertical"
                    android:paddingBottom="@dimen/xs_text_button_padding_top_px"
                    android:paddingLeft="@dimen/xs_global_padding_left_right_px"
                    android:paddingRight="@dimen/xs_global_padding_left_right_px"
                    android:paddingTop="@dimen/xs_text_button_padding_top_px"
                    android:text="@string/xs_operate_ticket_infor_str"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/xs_global_text_small_size_px" />

                <RelativeLayout
                    style="@style/RelativeLayoutItemStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true">

                    <TextView
                        android:id="@id/xs_label"
                        style="@style/ItemLabelStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/xs_department_str" />

                    <TextView
                        android:id="@+id/tv_department"
                        style="@style/EditTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@id/xs_label"
                        android:gravity="center_vertical|end" />
                </RelativeLayout>

                <RelativeLayout
                    style="@style/RelativeLayoutItemStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true">

                    <TextView
                        android:id="@id/xs_label"
                        style="@style/ItemLabelStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/xs_operate_code_str" />

                    <EditText
                        android:id="@+id/tv_code"
                        style="@style/EditTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@id/xs_label"
                        android:gravity="center_vertical|end" />
                </RelativeLayout>

                <RelativeLayout
                    style="@style/RelativeLayoutItemStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true">

                    <TextView
                        android:id="@id/xs_label"
                        style="@style/ItemLabelStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/xs_flr_str" />

                    <EditText
                        android:id="@+id/et_flr"
                        style="@style/EditTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@id/xs_label"
                        android:gravity="center_vertical|end"
                        android:hint="@string/xs_please_input_flr_str"
                        android:inputType="text"
                        android:maxLength="4" />
                </RelativeLayout>

                <RelativeLayout
                    style="@style/RelativeLayoutItemStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true">

                    <TextView
                        android:id="@id/xs_label"
                        style="@style/ItemLabelStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/xs_slr_str" />

                    <EditText
                        android:id="@+id/et_slr"
                        style="@style/EditTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@id/xs_label"
                        android:gravity="center_vertical|end"
                        android:hint="@string/xs_please_input_slr_str"
                        android:inputType="text"
                        android:maxLength="4" />
                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/tv_fl_time_container"
                    style="@style/RelativeLayoutItemStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@id/xs_label"
                        style="@style/ItemLabelStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/xs_fl_time_str" />

                    <TextView
                        android:id="@+id/tv_fl_time"
                        style="@style/EditTextStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"

                        android:layout_toRightOf="@id/xs_label"
                        android:layout_weight="1"
                        android:gravity="center_vertical|end" />

                    <ImageButton
                        android:id="@+id/ibtn_select_inspection_date"
                        android:layout_width="135px"
                        android:layout_height="135px"
                        android:layout_alignParentRight="true"
                        android:background="@android:color/transparent"
                        android:contentDescription="@null"
                        android:paddingBottom="22px"
                        android:paddingLeft="44px"
                        android:paddingTop="22px"
                        app:srcCompat="@drawable/xs_eliminate_date_button_background" />
                </LinearLayout>

                <LinearLayout
                    style="@style/RelativeLayoutItemStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@id/xs_label"
                        style="@style/ItemLabelStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/xs_operate_type_str" />

                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toRightOf="@id/xs_label"
                        android:minHeight="@dimen/xs_content_minheight"
                        android:scrollbars="none">

                        <RadioGroup
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <com.cnksi.bdzinspection.view.CustomRadioButton
                                android:id="@+id/rb_jh"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="30px"
                                android:layout_weight="1"
                                android:button="@null"
                                android:checked="true"
                                android:clickable="true"
                                android:text="@string/xs_operate_type_jh_str"
                                android:textColor="@color/xs_radio_button_text_selector"
                                android:textSize="@dimen/xs_global_text_small_size"
                                app:drawableLeft="@drawable/xs_radio_button_selector"
                                app:drawableSize="48px" />

                            <com.cnksi.bdzinspection.view.CustomRadioButton
                                android:id="@+id/rb_dr"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="30px"
                                android:layout_weight="1"
                                android:button="@null"
                                android:clickable="true"
                                android:text="@string/xs_operate_type_dr_str"
                                android:textColor="@color/xs_radio_button_text_selector"
                                android:textSize="@dimen/xs_global_text_small_size"
                                app:drawableLeft="@drawable/xs_radio_button_selector"
                                app:drawableSize="48px" />

                            <com.cnksi.bdzinspection.view.CustomRadioButton
                                android:id="@+id/rb_jxr"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="30px"
                                android:layout_weight="1"
                                android:button="@null"
                                android:clickable="true"
                                android:text="@string/xs_operate_type_jxr_str"
                                android:textColor="@color/xs_radio_button_text_selector"
                                android:textSize="@dimen/xs_global_text_small_size"
                                app:drawableLeft="@drawable/xs_radio_button_selector"
                                app:drawableSize="48px" />
                        </RadioGroup>
                    </HorizontalScrollView>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/xs_global_padding_left_right"
            android:background="@drawable/xs_red_button_background_selector"
            android:gravity="center"
            android:minHeight="@dimen/xs_button_minheight"
            android:text="@string/xs_next_step_str"
            android:textColor="@android:color/white"
            android:textSize="@dimen/xs_global_text_size" />

    </LinearLayout>
</layout>